# Aquabot_packages

./: README.md
aquabot_ekf/: CMakeLists.txt
aquabot_ekf/launch/: ekf_launch.py  topics_launch.py
camera_control/: README.md  package.xml  setup.py
camera_control/camera_control/: camera_control.py
camera_qrcode/: CMakeLists.txt  README.md  package.xml
camera_qrcode/scripts/: opencv_decoder.py
camera_qrcode/src/camera_qrcode/: opencv_decoder_node.py
custom_interface/: CMakeLists.txt  package.xml
mission/: CMakeLists.txt  package.xml
mission/src/: mission.py
my_team_package/: CMakeLists.txt  package.xml
my_team_package/src/: my_team_node.cpp
nautilus_launch/: CMakeLists.txt  README.md  package.xml
nautilus_launch/launch/: nautilus_launch.py
opencv_example/: CMakeLists.txt  package.xml
py_pathfinding/: README  package.xml  pathFindingcotan.py  setup.cfg  setup.py
py_pathfinding/py_pathfinding/: client_member_function.py  pathFindingcotan.py  service_member_function.py  test.py
py_pubsub/: package.xml  setup.py
py_srvcli/: package.xml  pathFindingcotan.py  setup.py
py_srvcli/py_srvcli/: client_member_function.py  service_member_function.py
simple_launch/simple_launch/: __init__.py
tracking/: README  package.xml  setup.py
tracking/tracking/: tracking.py
tutorial_interfaces/: CMakeLists.txt  package.xml
tutorial_interfaces/msg/: Path.msg
tutorial_interfaces/srv/: Pathfind.srv
