<?xml version="1.0"?>
<package format="3">
  <name>tracking</name>
  <version>0.1.0</version>
  <description>Un package ROS 2 pour écouter les messages d'odométrie</description>
  
  <maintainer email="votre.email@example.com">Votre Nom</maintainer>
  <license>Apache-2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ament_python</exec_depend>
  
  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
